updated to javafx 13 and fontawesome 11 using javafx-maven-plugin improved, but run and jlink not working yet